refactor: 불변컬렉션으로 인해 테스트 시 정렬이 안되었던 문제 해결