@@ -1,5 +1,6 @@
 package lotto;
 
+import java.util.Arrays;
 import java.util.List;
 import lotto.model.NumberGenerateStrategy;
 
@@ -7,6 +8,6 @@ public class TestNumberGenerateStrategy implements NumberGenerateStrategy {
 
     @Override
     public List<Integer> generate() {
-        return List.of(44, 10, 30, 12, 28, 45);
+        return Arrays.asList(44, 28, 10, 45, 30, 12);
     }
 }
